[package]
name = "async-await-echo"
version = "0.1.0"
authors = ["douglasmg7 <douglasmg7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Asynchronous HTTP library.
hyper = "0.13"
# Runtime needed by Hyper.
tokio = { version = "0.2", features = ["full"] }
#// Only for testing.
anyhow = "1.0.31"
reqwest = { version = "0.10.4", features = ["blocking"] }
